--- a/views/bands.html
+++ b/views/bands.html
@@ -42,7 +42,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Bands<span class="sr-only">(current)</span></a></li>
+            <li class="active"><a href="#">Artists<span class="sr-only">(current)</span></a></li>
             <li><a href="/concerts">Concerts</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
