--- a/views/concerts.html
+++ b/views/concerts.html
@@ -41,7 +41,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="/bands">Bands</a></li>
+            <li><a href="/bands">Artists</a></li>
             <li class="active"><a href="#">Concerts<span class="sr-only">(current)</span></a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
@@ -85,7 +85,7 @@
                             <span class='concertId'>{{_id}}</span>
                           </li>
                           <li class="list-group-item">
-                            <h4 class='inline-header'>Band</h4>
+                            <h4 class='inline-header'>Artist</h4>
                             <span class='concert-bandId'>{{band}}</span>
                           </li>
                           <li class="list-group-item">
@@ -115,6 +115,7 @@
                         </ul>
                         <!-- embed archive recording -->
                         <div class="music-player">
+                          <iframe src="{{recording_url}}&playlist=1" width="500" height="300" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
                         </div>
 
                       </div>
