--- a/views/index.html
+++ b/views/index.html
@@ -41,7 +41,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="/bands">Bands</a></li>
+            <li><a href="/bands">Artists</a></li>
             <li><a href="/concerts">Concerts</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
