--- a/views/profile.html
+++ b/views/profile.html
@@ -46,7 +46,9 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li>
-              <li class="active"><a href="#">My Profile<span class="sr-only">(current)</span></a></li>
+              <li><a href="/login">Login</a></li>
+              <li><a href="/logout">Logut</a></li>
+              <li><a href="/signup">Signup</a></li>
             </li>
           </ul>
         </div><!-- /.navbar-collapse -->
